--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,10 +16,12 @@
     <script data-goatcounter="https://lineuplist.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/grids-responsive-min.css" />
     <link rel="canonical" href="{{canonicalUrl}}">
     {{else}}
     <!-- Non-minified for dev -->
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/grids-responsive.css" />
     {{/if}}
 
     <link rel="stylesheet" href="/css/style.css">
