--- a/views/customize-list.handlebars
+++ b/views/customize-list.handlebars
@@ -1,7 +1,6 @@
-<h2>Customize your {{festival.display_name}} {{festival.year}} lineup</h2>
+<h2 style="text-align: center;">Customize your {{festival.display_name}} {{festival.year}} lineup</h2>
 <form class="pure-form" id="listOptionsForm" action="/generate-lineup-list" method="POST" style="display: flex; flex-direction: column;">
-    <div class="pure-g">
-        <div class="pure-u-1-12 pure-u-lg-5-24 pure-u-md-1-8"></div>
+    <div class="pure-g" style="justify-content: center;">
         <div id="formContent" class="pure-g pure-u-11-12 pure-u-lg-7-12 pure-u-md-3-4" style="display: flex; flex-direction: row; justify-content: space-between;">
             <div id="filters" class="pure-u-11-24 pure-u-lg-2-5 pure-u-md-5-12">
                 <div style="display: flex; flex-direction: column;">
