--- a/views/generate-playlist-success.handlebars
+++ b/views/generate-playlist-success.handlebars
@@ -1,1 +1,1 @@
-<h3>Successfully generated playlist '{{playlistName}}' for {{festival.display_name}} {{festivalYear}}<h3>
+<h3 style="text-align: center;">Successfully generated playlist '{{playlistName}}' for {{festival.display_name}} {{festivalYear}}<h3>
