Add buttons to final generation screen to either return to re-customizing existing fest lineup or to start over with new one. Added css to make non-scroll pages center vertically

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,17 @@
+/* html and body needed exactly like this to take full viewport height */
+html {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
 
+body {
+    margin: 0;
+    width: 100%;
+    min-height: 100%;
+}
+
+/* ------------------- Select customizations -------------------  */
 select {
   -webkit-appearance: none;
   background-color: transparent;
