Add spotify deeplink to new playlist on success generate page

--- a/views/generate-playlist-success.handlebars
+++ b/views/generate-playlist-success.handlebars
@@ -1,12 +1,15 @@
 <h2 style="text-align: center;">Successfully generated playlist '{{playlistName}}' for {{festival.display_name}} {{festivalYear}}</h2>
-<p style="text-align: center;">Open up Spotify on your device of choice to check out your new playlist (or just <a href="https://open.spotify.com" target="_blank" rel="noopener noreferrer">open the web player</a>)
+<form action="{{playlistUrl}}" method="GET" target="_blank" rel="noopener noreferrer" style="margin: 1em 0 1em 0;">
+    <input class="pure-button pure-button-primary" type="submit" value="Check out your new playlist"></input>
+</form>
+<p style="text-align: center;">- or -</p>
 <div class="pure-g" style="justify-content: center; align-items: center; text-align: center;">
     <form class="pure-u-7-8 pure-u-lg-1-4 pure-u-md-5-12" action="customize" method="GET">
-        <input type="submit" class="pure-button pure-button-primary" style="width: auto; height: auto; white-space: normal; word-wrap: break-word; margin: 1em;" value="Change your lineup options and regenerate for this festival"></input>
+        <input type="submit" class="pure-button" style="width: auto; height: auto; white-space: normal; word-wrap: break-word; margin: 1em;" value="Change your lineup options and regenerate for this festival"></input>
         <input type="hidden" name="festival" value="{{festival.name}}">
         <input type="hidden" name="year" value="{{festivalYear}}">
     </form>
     <form class="pure-u-7-8 pure-u-lg-1-4 pure-u-md-5-12" action="/" method="GET">
-        <input type="submit" class="pure-button pure-button-primary" style="width: auto; height: auto; white-space: normal; word-wrap: break-word; margin: 1em;" value="Create a lineup for another festival"></input>
+        <input type="submit" class="pure-button" style="width: auto; height: auto; white-space: normal; word-wrap: break-word; margin: 1em;" value="Create a lineup for another festival"></input>
     </form>
 </div>
