--- a/views/generate-playlist-success.handlebars
+++ b/views/generate-playlist-success.handlebars
@@ -1,4 +1,4 @@
-<h2 style="text-align: center;">Successfully generated playlist '{{playlistName}}' for {{festival.display_name}} {{festivalYear}}</h2>
+<h2 style="text-align: center; margin: 1em 2em 1em 2em;">Successfully generated playlist '{{playlistName}}' for {{festival.display_name}} {{festivalYear}}</h2>
 <form action="{{playlistUrl}}" method="GET" target="_blank" rel="noopener noreferrer" style="margin: 1em 0 1em 0;">
     <input class="pure-button pure-button-primary" type="submit" value="Check out your new playlist"></input>
 </form>
