--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,6 +34,13 @@
     <link rel="alternate icon" href="/favicon.ico">
 </head>
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+    <div class="pure-menu nav">
+        <a class="pure-menu-link nav-item" href="/">Home</a>
+        <a class="pure-menu-link nav-item" href="/about">About</a>
+    </div>
+    <div class="mobile-nav">
+        <a href="/">mobilehome</a>
+    </div>
     {{{body}}}
 </body>
 </html>
