--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <h1>Lineup List</h1>
-<p style="text-align: center;">Create a festival lineup of artists according to your preferred genres. Once you've chosen your artists you also have the option to generate a playlist within your Spotify account.</p>
+<p style="text-align: center; margin: 1em 2em 1em 2em">Create a festival lineup of artists according to your preferred genres, track type, and more. Once you've chosen your artists and filter settings, generate a playlist specific to you within your Spotify account.</p>
 <h3>Choose a festival to begin</h3>
 <form action="/customize" method="GET" style="display: flex; flex-direction: column;">
     <div style="display: flex; flex-direction: row; margin-top: 1rem; margin-bottom: .5rem; justify-content: center;">
