--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
     <div class="pure-menu nav">
         <a class="pure-menu-link nav-item" href="/">Home</a>
-        <a class="pure-menu-link nav-item" href="/about">About</a>
+        <a class="pure-menu-link nav-item" href="/faq">FAQ</a>
     </div>
     <div class="mobile-nav">
         <a href="/">mobilehome</a>
